Fixed small errors, and improved quality and UX
